# create_aimtool_file

./: BONE-1.aimtool  README.md  pyproject.toml
create_aimtool_file/: __init__.py  main.py
